Restore accelerator group in Glade file
It got removed by accident in commit
c85b89afdd880b7a6aac42f953bab83d3938a4a3 "Port more of the Project properties dialog to Glade"

--- a/data/geany.glade
+++ b/data/geany.glade
@@ -2,6 +2,7 @@
 <interface>
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy toplevel-contextual -->
+  <object class="GtkAccelGroup" id="accelgroup1"/>
   <object class="GtkAdjustment" id="adjustment10">
     <property name="lower">1</property>
     <property name="upper">99</property>
@@ -84,6 +85,7 @@
         <property name="can_focus">False</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
+        <property name="accel_group">accelgroup1</property>
         <signal name="activate" handler="on_undo1_activate" swapped="no"/>
       </object>
     </child>
@@ -95,6 +97,7 @@
         <property name="can_focus">False</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
+        <property name="accel_group">accelgroup1</property>
         <signal name="activate" handler="on_redo1_activate" swapped="no"/>
       </object>
     </child>
@@ -112,6 +115,7 @@
         <property name="can_focus">False</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
+        <property name="accel_group">accelgroup1</property>
         <signal name="activate" handler="on_cut1_activate" swapped="no"/>
       </object>
     </child>
@@ -123,6 +127,7 @@
         <property name="can_focus">False</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
+        <property name="accel_group">accelgroup1</property>
         <signal name="activate" handler="on_copy1_activate" swapped="no"/>
       </object>
     </child>
@@ -134,6 +139,7 @@
         <property name="can_focus">False</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
+        <property name="accel_group">accelgroup1</property>
         <signal name="activate" handler="on_paste1_activate" swapped="no"/>
       </object>
     </child>
@@ -145,6 +151,7 @@
         <property name="can_focus">False</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
+        <property name="accel_group">accelgroup1</property>
         <signal name="activate" handler="on_delete1_activate" swapped="no"/>
       </object>
     </child>
@@ -162,6 +169,7 @@
         <property name="can_focus">False</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
+        <property name="accel_group">accelgroup1</property>
         <signal name="activate" handler="on_menu_select_all1_activate" swapped="no"/>
       </object>
     </child>
@@ -6999,6 +7007,9 @@
         <property name="AtkObject::accessible-name" translatable="yes">Geany</property>
       </object>
     </child>
+    <accel-groups>
+      <group name="accelgroup1"/>
+    </accel-groups>
     <child>
       <object class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
@@ -7030,6 +7041,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_new1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -7058,6 +7070,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_open1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -7094,6 +7107,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_save1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -7105,6 +7119,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_save_as1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -7170,6 +7185,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_file_properties_activate" swapped="no"/>
                           </object>
                         </child>
@@ -7197,6 +7213,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_print1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -7214,6 +7231,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_close1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -7255,6 +7273,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_quit1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -7281,6 +7300,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_undo1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -7292,6 +7312,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_redo1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -7309,6 +7330,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_cut1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -7320,6 +7342,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_copy1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -7331,6 +7354,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_paste1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -7342,6 +7366,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_delete1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -7359,6 +7384,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_menu_select_all1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -7815,6 +7841,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_find1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -8209,6 +8236,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_zoom_in1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -8220,6 +8248,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_zoom_out1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -8231,6 +8260,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_normal_size1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -8763,6 +8793,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_project_properties1_activate" swapped="no"/>
                           </object>
                         </child>
@@ -8920,6 +8951,7 @@
                             <property name="can_focus">False</property>
                             <property name="use_underline">True</property>
                             <property name="use_stock">True</property>
+                            <property name="accel_group">accelgroup1</property>
                             <signal name="activate" handler="on_info1_activate" swapped="no"/>
                           </object>
                         </child>
