Make Glade object names unique throughout
This fixes object name clashes when making changes using Glade 3.8.1 (maybe a Glade bug).

--- a/data/geany.glade
+++ b/data/geany.glade
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk+" version="2.16"/>
-  <!-- interface-naming-policy toplevel-contextual -->
+  <!-- interface-naming-policy project-wide -->
   <object class="GtkAccelGroup" id="accelgroup1"/>
   <object class="GtkAdjustment" id="adjustment1">
     <property name="lower">3</property>
