Set prefs' encoding combo boxes "wrap with" in the Glade file directly

--- a/data/geany.glade
+++ b/data/geany.glade
@@ -4266,6 +4266,7 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="model">encoding_list</property>
+                                        <property name="wrap_width">3</property>
                                         <child>
                                           <object class="GtkCellRendererText" id="cellrenderertext6"/>
                                           <attributes>
@@ -4332,6 +4333,7 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="model">encoding_list</property>
+                                        <property name="wrap_width">3</property>
                                         <child>
                                           <object class="GtkCellRendererText" id="cellrenderertext7"/>
                                           <attributes>
