Add a separator after the Color Schemes menu item

--- a/data/geany.glade
+++ b/data/geany.glade
@@ -8324,6 +8324,13 @@
                                   </object>
                                 </child>
                                 <child>
+                                  <object class="GtkSeparatorMenuItem" id="separatormenuitem1">
+                                    <property name="use_action_appearance">False</property>
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                  </object>
+                                </child>
+                                <child>
                                   <object class="GtkCheckMenuItem" id="menu_markers_margin1">
                                     <property name="use_action_appearance">False</property>
                                     <property name="visible">True</property>
