--- a/data/geany.glade
+++ b/data/geany.glade
@@ -997,7 +997,7 @@
                                   <object class="GtkEntry" id="startup_path_entry">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
-                                    <property name="tooltip_text" translatable="yes">Path to start in when opening or saving files. Must be an absolute path. Leave blank to use the current working directory.</property>
+                                    <property name="tooltip_text" translatable="yes">Path to start in when opening or saving files. Must be an absolute path.</property>
                                     <property name="invisible_char">•</property>
                                     <property name="primary_icon_activatable">False</property>
                                     <property name="secondary_icon_activatable">False</property>
